fix image cropper

--- a/web/styles/styles.css
+++ b/web/styles/styles.css
@@ -6,6 +6,7 @@
     --main-color: #c238a2;
     --circle-color: #fddc81;
     --block-background: #ffffff;
+    --disabled-color: #eeeeee;
 
     --menu-background: #f1f1f1;
     --submenu-background: #ececec;
